--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 authors = ["Shingo Yamazaki <shingoyamazaki00@gmail.com>"]
 edition = "2018"
 
+[dependencies]
+actix-web = "3.1.0"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
