--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,9 @@ edition = "2018"
 
 [dependencies]
 actix-web = "3.1.0"
+actix-session = "0.4.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "user-sessions"
+path = "src/user-sessions.rs"
